--- a/Web Services/HW01/CompanyEmployees/CompanyEmployees/CompanyEmployees.csproj
+++ b/Web Services/HW01/CompanyEmployees/CompanyEmployees/CompanyEmployees.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
+  </ItemGroup>
+
 </Project>
